--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,17 @@
           </classpathContainers>
         </configuration>
       </plugin>
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-jar-plugin</artifactId>
+		<configuration>
+		<archive>
+			<manifestFile>
+			src/main/resources/META-INF/MANIFEST.MF
+			</manifestFile>
+		</archive>
+		</configuration>
+	</plugin>
     </plugins>
   </build>
 
