--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   
-  <groupId>org.nuxeo</groupId>
+  <groupId>org.athento.nuxeo</groupId>
   <artifactId>Invoice</artifactId>
     <version>1.0-SNAPSHOT</version>
   <name>Invoice</name>
@@ -124,16 +124,7 @@
         <enabled>true</enabled>
       </snapshots>
     </repository>
-    <repository>
-      <id>nuxeo-studio</id>
-      <url>https://connect.nuxeo.com/nuxeo/site/studio/maven</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
+
   </repositories>
 
   <pluginRepositories>
